# QuailDE

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  quailde.example.toml
crates/quail-compositor/: Cargo.toml
crates/quail-compositor/src/: apps.rs  backend.rs  cursor.rs  drm_output.rs  launcher.rs  lib.rs  linux.rs  main.rs  output.rs  protocol.rs  render.rs  runtime.rs  scene.rs  shell.rs  software.rs  state.rs  terminal.rs  theme.rs
docs/: architecture.md  vision.md
patches/: plasma-workspace-quail.patch
scripts/: build-plasma-workspace.sh  install-plasma-dev-session.sh
src/: app.rs  config.rs  main.rs  session.rs  shell.rs
