[workspace]
members = ["crates/quail-compositor"]
resolver = "3"

[package]
name = "quailde"
version = "0.1.0"
edition = "2024"
description = "A lightweight, modern Linux desktop environment bootstrap"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
