[package]
name = "quail-compositor"
version = "0.1.0"
edition = "2024"
description = "The compositor runtime for QuailDE"
license = "MIT"

[dependencies]
ab_glyph = "0.2"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
drm = "0.15"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
libc = "0.2"
memmap2 = "0.9"
wayland-server = "0.31.13"
wayland-protocols = { version = "0.32.12", features = ["server"] }
